# Choir.chat

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  KODING.md  README.md  actor_model.py  post_chain_actors.py  render.yaml  reward_function.py  reward_function_simplified.py  run_post_chain.py  tap_area_debugging.md  turso_integration.py
api/: Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_push_notification.py  test_push_notification_e2e.py
api/app/: chorus_graph.py  config.py  database.py  langchain_utils.py  utils.py
api/app/middleware/: __init__.py  auth.py
api/app/models/: api.py  auth.py  user.py
api/app/postchain/: README.md  __init__.py  aeiou.py  api.py  checkpointer.py  graph.py  langchain_workflow.py  langchain_workflow.py.old  langchain_workflow_fixed.py  postchain_graph.py  postchain_llm.py  provider_info.md  simple_graph.py  state_manager.py  utils.py
api/app/routers/: auth.py  balance.py  chorus.py  embeddings.py  notifications.py  postchain.py  threads.py  users.py  vectors.py  wallet.py
api/app/services/: auth_service.py  chorus.py  notification_service.py  push_notification_service.py  (+3 more)
api/blog/: business_model.md  inverse_scaling_law.md  loop_of_thought.md
api/content/: landing.md  marketing.md  privacy.md  support.md
api/templates/: base.html
api/tests/: __init__.py  conftest.py  test_chorus_endpoints.py  test_core_endpoints.py  test_database.py  test_main.py  test_model_compatibility.py  test_response_schemas.py  test_structured_outputs.py  test_sui_service.py  test_user_thread_endpoints.py
(+647 files in other folders)
