[project]
name = "choir-api"
version = "0.1.0"
description = "Choir API - AI for social discourse"
authors = [
    {name = "Yusef Mosiah Nathanson", email = "yusef@choir.chat"}
]

requires-python = ">=3.12"
dependencies = [
    "cryptography==44.0.2",
    "fastapi==0.115.4",
    "gunicorn==20.1.0",
    "httpx>=0.25.2",
    "jinja2==3.1.6",
    "langchain==0.3.25",
    "langchain-anthropic==0.3.13",
    "langchain-aws==0.2.23",

    "langchain-community==0.3.24",
    "langchain-core==0.3.61",
    "langchain-google-genai==2.0.11",
    "langchain-groq==0.2.4",
    "langchain-mistralai==0.2.7",
    "langchain-openai==0.3.18",
    "langchain-qdrant==0.2.0",
    "litellm==1.63.0",
    "markdown==3.4.3",
    "openai==1.82.0",
    "pydantic>=2.10.0",
    "pydantic-settings==2.6.1",
    "pyjwt==2.10.1",
    "pysui==0.79.0",
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "qdrant-client==1.12.1",
    "tiktoken==0.8.0",
    "tokenizers==0.15.2",
    "uvicorn[standard]==0.27.1",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
